Update API URLs to use production backend

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-VITE_BASE_URL=http://localhost:4000
-VITE_BACKEND_URL=http://localhost:4000
-VITE_COLLEGE_URL = http://localhost:4000
+VITE_BASE_URL=https://college-web-backend-6opl.onrender.com
+VITE_BACKEND_URL=https://college-web-backend-6opl.onrender.com
+VITE_COLLEGE_URL=https://college-web-backend-6opl.onrender.com
