Refactor CSS styles, update environment variables, and modify API URLs for consistency

--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ JWT_SECRET = 'user-video-secret'
 # GOOGLE_MAPS_API=AIzaSyBWp1I1I5gI4POdRlJFS97UENe2RGtfz2Y
 # GOOGLE_MAPS_API=AIzaSyBEVT9Ja2Wj7qpKg-jARbf8lT-_POJnusU
 
-NODE_ENV='development'
+NODE_ENV=development
 
 
 SMTP_USER="85dd55001@smtp-brevo.com"
