Update environment variables for production deployment

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL=http://localhost:4000
+VITE_BASE_URL=https://college-web-backend-6opl.onrender.com
 
 
 VITE_BACKEND_URL=https://college-web-backend-6opl.onrender.com
