abi env change kiya

--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,10 @@
 PORT=4000
 DB_CONNECT=mongodb+srv://asif:asif1234@cluster0.ved9p.mongodb.net/
 JWT_SECRET='user-video-secret'
-# PRODUCTION_URL2=https://college-web-backend-6opl.onrender.com
+PRODUCTION_URL2=https://college-web-backend-6opl.onrender.com
 
 
-PRODUCTION_URL2 = 'http://localhost:4000'
+# PRODUCTION_URL2 = 'http://localhost:4000'
 # GOOGLE_MAPS_API=AIzaSyBWp1I1I5gI4POdRlJFS97UENe2RGtfz2Y
 # GOOGLE_MAPS_API=AIzaSyBEVT9Ja2Wj7qpKg-jARbf8lT-_POJnusU
 
