--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,9 @@
-VITE_BASE_URL=https://college-web-frontend-6opl.onrender.com
+# VITE_BASE_URL=https://college-web-frontend-6opl.onrender.com
 # VITE_BASE_URL=http://localhost:4000
 # VITE_BASE_URL=https://college-web-test-backend.onrender.com
 
 
-VITE_BACKEND_URL=https://college-web-backend-6opl.onrender.com
-VITE_COLLEGE_URL=https://college-web-backend-6opl.onrender.com
+VITE_BASE_URL=https://college-web-backend-6opl.onrender.com
+# VITE_BACKEND_URL=http://localhost:4000
+
+# VITE_COLLEGE_URL=https://college-web-backend-6opl.onrender.com
